[project]
name = "voice-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "librosa>=0.11.0",
    "llvmlite>=0.43.0",
    "numba>=0.55.0",
    "openai-whisper>=20250625",
    "soundfile>=0.13.1",
    "streamlit>=1.49.1",
]
